--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <main>
 
 <h1> Hello world</h1>
+<h2>HI friends</h2>
+<h3>Another line</h3>
    <div class='boxOne'>
       <h1 class='full-width'>Box One</h1>
       <br />
